aggiunto campo autocomplete per l'indirizzo (basato sull'esempio sul sito di mui)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.1",
     "dayjs": "^1.11.19",
     "jwt-decode": "^4.0.0",
+    "mui-address-autocomplete": "^2.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
